--- a/reqs/L2/SCI-09.yml
+++ b/reqs/L2/SCI-09.yml
@@ -8,8 +8,8 @@ mission success criteria: ''
 normative: true
 rationale: ''
 ref: ''
-reviewed: cce9a0fe3dfe3f5621454e69fe0effb0
-short name: Receiver
+reviewed: 1b590c6616eef15d087ddce29e131d8c
+short name: 1&3
 text: |
-  The system shall use a receiver for astronomical observation.
+  The system shall observe in the 1 mm and 3 mm range.
 verification plan: ''
