--- a/reqs/L2/SCI-04.yml
+++ b/reqs/L2/SCI-04.yml
@@ -8,9 +8,8 @@ mission success criteria: ''
 normative: true
 rationale: ''
 ref: ''
-reviewed: a8fac7ba9bf7c6b712983736c08f8dbe
-short name: ElevationMax
+reviewed: 7595c4ae9799b0eca81cf2dba9167cea
+short name: Control System
 text: |
-  The system shall be able to observe objects located at up to 80 degrees
-  elevation.
+  The system shall be equipped with a modern control system.
 verification plan: ''
