--- a/reqs/L2/SCI-06.yml
+++ b/reqs/L2/SCI-06.yml
@@ -8,9 +8,8 @@ mission success criteria: ''
 normative: true
 rationale: ''
 ref: ''
-reviewed: a8fac7ba9bf7c6b712983736c08f8dbe
-short name: ElevationMax
+reviewed: d96ced794a466e383f466f6dd2bf49c3
+short name: Pointing
 text: |
-  The system shall be able to observe objects located at up to 80 degrees
-  elevation.
+  The system shall be able to point to a specified point in the sky.
 verification plan: ''
