--- a/reqs/L3/Tech-18.yml
+++ b/reqs/L3/Tech-18.yml
@@ -9,7 +9,7 @@ normative: true
 rationale: ''
 ref: ''
 reviewed: 7008a670ba6438ae586565503ddd9b3f
-short name: StopButtons
+short name: 6 Stop Buttons
 text: |
   The system shall have 6 mushroom stop buttons located around the cabin and
   platform.
