--- a/reqs/L3/Tech-22.yml
+++ b/reqs/L3/Tech-22.yml
@@ -9,7 +9,7 @@ normative: true
 rationale: ''
 ref: ''
 reviewed: 3e2e740ddf79e953ec311d3f4e2932ab
-short name: AzimuthAngular
+short name: Azimuth, Angular
 text: |
   Something about azimuth angular speed here-see Justin's trace matrix.
 verification plan: ''
