--- a/reqs/L3/Tech-8.yml
+++ b/reqs/L3/Tech-8.yml
@@ -10,7 +10,7 @@ normative: true
 rationale: ''
 ref: ''
 reviewed: 1bc0d7b6acd35f43d631a502959c1d0b
-short name: Outreach
+short name: Attach Receiver for Outreach
 text: |
   The system shall have capability to attach receiver for outreach purposes.
 verification plan: ''
